--- a/Kopigrad/Components/Pages/Admin/Service/AddMiniServiceInfo.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/AddMiniServiceInfo.razor
@@ -169,7 +169,7 @@
     async Task SaveChanges()
     {
         Classes.Admin.Servise.ManagmentMiniService managment = new Classes.Admin.Servise.ManagmentMiniService();
-        managment.Add(Convert.ToInt32(id), nameMiniService, topCategory, bottomCategory, headerValues, materialIds, priceList);
+        managment.Add(Convert.ToInt32(id), nameMiniService, topCategory, bottomCategory, headerValues, materialIds.Distinct().ToList(), priceList);
 
 
         Navigation.NavigateTo($"/AddInfoService/{id}");
