--- a/Kopigrad/Components/Pages/User/BusinessCard.razor
+++ b/Kopigrad/Components/Pages/User/BusinessCard.razor
@@ -1,58 +1,117 @@
 ﻿@page "/businesscard"
-
+@layout Layout.Menu.MenuUser;
 @rendermode InteractiveServer
 
 @using System.Net.Http.Json
 @inject HttpClient Http
 
-<h3>Генератор визиток</h3>
 
-<div class="form-group">
-    <label>Имя:</label>
-    <input class="form-control" @bind="Name" />
+<head>
+    <link rel="stylesheet" href="users.css">
+</head>
+
+<div class="Banner">
+    <h5 class="TextBanner">Генератор визиток</h5>
 </div>
 
-<div class="form-group">
-    <label>Должность:</label>
-    <input class="form-control" @bind="JobTitle" />
-</div>
 
-<div class="form-group">
-    <label>Компания:</label>
-    <input class="form-control" @bind="Company" />
-</div>
+<div class="divUsersColumn">
+    <table style="margin: 5vw 5vw 5vw 5vw;">
+        <tr>
+            <td>
+                <label class="TextCalculator" style="text-align: center;     font-size: 2.5vh;">Информация:</label>
+            </td>
 
-<div class="form-group">
-    <label>Контакт:</label>
-    <input class="form-control" @bind="Contact" />
-</div>
+        </tr>
+        <tr>
+            <td>
+                <label class="TextCalculator" style=" text-align: left;">Имя:</label>
+            </td>
 
-<div class="form-group">
-    <label>Стиль визитки:</label>
-    <select class="form-control" @bind="SelectedStyle">
-        @foreach (var style in Styles)
-        {
-            <option value="@style">@style</option>
-        }
-    </select>
-</div>
+            <td>
+                <input class="inputUser" @bind="Name" />
+            </td>
 
-<button class="btn btn-primary mt-2" @onclick="GenerateImageAsync" disabled="@IsLoading">
-    @(IsLoading ? "Генерация..." : "Сгенерировать визитку")
-</button>
 
-@if (!string.IsNullOrEmpty(ImageUrl))
-{
-    <div class="mt-3">
-        <img src="@ImageUrl" alt="Business Card" style="max-width:100%; border: 1px solid #ccc;" />
 
-        <div class="mt-2">
-            <a class="btn btn-success" href="@ImageUrl" download="@($"{Name}_card.png")" target="_blank">
-                Скачать визитку
-            </a>
+        </tr>
+
+        <tr>
+            <td>
+                <label class="TextCalculator" style=" text-align: left;">Должность:</label>
+            </td>
+
+            <td>
+                <input class="inputUser" @bind="JobTitle" />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <label class="TextCalculator" style=" text-align: left;">Компания:</label>
+            </td>
+
+            <td>
+                <input class="inputUser" @bind="Company" />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <label class="TextCalculator" style=" text-align: left;">Контакт:</label>
+            </td>
+
+            <td>
+                <input class="inputUser" @bind="Contact" />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <label class="TextCalculator" style=" text-align: left;">Стиль визитки:</label>
+            </td>
+
+            <td>
+                <select class="inputUser" @bind="SelectedStyle">
+                    @foreach (var style in Styles)
+                    {
+                        <option value="@style">@style</option>
+                    }
+                </select>
+            </td>
+        </tr>
+
+        <tr>
+
+            <button class="ButtonUsers" style=" text-align: center;" @onclick="GenerateImageAsync" disabled="@IsLoading">
+                @(IsLoading ? "Генерация..." : "Сгенерировать визитку")
+            </button>
+        </tr>
+
+
+
+    </table>
+
+    @if (!string.IsNullOrEmpty(ImageUrl))
+    {
+        <div class="mt-3" style="margin: 5vw 5vw 5vw 5vw;">
+            <img src="@ImageUrl" alt="Business Card" style="width: 30vw; border: 1px solid #ccc; text-align: center; margin: 10vw 5vw 5vw 5vw;" />
+
+            <div class="mt-2">
+                <a class="ButtonUsersDombload" style="text-align: center; margin: 0vw 5vw 0vw 5vw;" href="@ImageUrl" download="@($"{Name}_card.png")" target="_blank">
+                    Скачать визитку
+                </a>
+            </div>
         </div>
-    </div>
-}
+    }
+
+</div>
+
+
+
+
+
+
 
 @if (!string.IsNullOrEmpty(ErrorMessage))
 {
