--- a/Kopigrad/Components/Pages/User/BusinessCard.razor
+++ b/Kopigrad/Components/Pages/User/BusinessCard.razor
@@ -130,7 +130,7 @@
 
     private readonly string[] Styles = new[]
     {
-        "Минимализм", "Современный", "Технологичный", "Ретро", "Классический", "Черно-белый", "Цветной"
+        "Минимализм", "Современный", "Технологичный", "Ретро", "Классический", "Черно-белый", "Цветной",  "Аниме", "Китайский"
     };
 
     private const string ApiKey = "1b64c4d6-9e17-403d-aee0-0b1a3766ba69";
